feat: add Crowdin configuration file

--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -9,6 +9,7 @@ on:
       - '*.md'
       - '.github/**'
       - '!.github/workflows/**'
+      - 'crowdin.yml'
   pull_request:
     types: [opened, synchronize, reopened]
 
